tests: update minimal_init to include fzf-lua as a dep

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/ts-vimdoc.nvim"]
 	path = deps/ts-vimdoc.nvim
 	url = https://github.com/ibhagwan/ts-vimdoc.nvim
+[submodule "deps/fzf-lua"]
+	path = deps/fzf-lua
+	url = https://github.com/ibhagwan/fzf-lua
